Add authentification requirement for all actions

--- a/blogs/changes.txt
+++ b/blogs/changes.txt
@@ -9,4 +9,7 @@ get_blogs - adjusted for blog privacy settings
 get_comments - fixed to get comments of a blog
 get_blog - adjusted for blog privacy settings
 get_user_blogs - created function for getting all the blogs belonging to a user
-add docker support for database
+add docker support for webserver & database
+user_id is now received via request.user.id (jwt token auth is required)
+
+#TODO - change the host back to db in settings
