Fix registraton & verify jwt token for verification

--- a/blogs/changes.txt
+++ b/blogs/changes.txt
@@ -11,5 +11,7 @@ get_blog - adjusted for blog privacy settings
 get_user_blogs - created function for getting all the blogs belonging to a user
 add docker support for webserver & database
 user_id is now received via request.user.id (jwt token auth is required)
-
-#TODO - change the host back to db in settings
+merge with branch user-profile
+fixed registration & otp generation
+added jwt token auth verification for every method
+fix adding methods to private posts
